project/word_filter/debug
word_filter.c: In function ‘main’:
word_filter.c:42:28: warning: passing argument 1 of ‘stream_input_parse’ from incompatible pointer type [-Wincompatible-pointer-types]
   ret = stream_input_parse(path);
                            ^
In file included from word_filter.c:2:0:
stream_parse.h:102:5: note: expected ‘stream_buffer * {aka struct stream_buffer *}’ but argument is of type ‘char *’
 int stream_input_parse(stream_buffer *sb, char *path);
     ^
word_filter.c:42:9: error: too few arguments to function ‘stream_input_parse’
   ret = stream_input_parse(path);
         ^
In file included from word_filter.c:2:0:
stream_parse.h:102:5: note: declared here
 int stream_input_parse(stream_buffer *sb, char *path);
     ^
word_filter.c:76:3: warning: implicit declaration of function ‘stream_buffer_destory’ [-Wimplicit-function-declaration]
   stream_buffer_destory   (sb);
   ^
data_store_list_impl.c: In function ‘data_store_destroy’:
data_store_list_impl.c:103:20: warning: dereferencing ‘void *’ pointer
  for (node=ds->priv->head ; node ; node=node->next) 
                    ^
data_store_list_impl.c:103:20: error: request for member ‘head’ in something not a structure or union
data_store_list_impl.c: In function ‘data_store_insert_count’:
data_store_list_impl.c:124:11: error: ‘WF_WORD_INSERT_FAIL’ undeclared (first use in this function)
    return WF_WORD_INSERT_FAIL;
           ^
data_store_list_impl.c:124:11: note: each undeclared identifier is reported only once for each function it appears in
data_store_list_impl.c:126:15: warning: dereferencing ‘void *’ pointer
   if (ds->priv->count ) {
               ^
data_store_list_impl.c:126:15: error: request for member ‘count’ in something not a structure or union
data_store_list_impl.c:129:12: warning: dereferencing ‘void *’ pointer
    ds->priv->head  = node;
            ^
data_store_list_impl.c:129:12: error: request for member ‘head’ in something not a structure or union
data_store_list_impl.c:130:12: warning: dereferencing ‘void *’ pointer
    ds->priv->tail  = node;
            ^
data_store_list_impl.c:130:12: error: request for member ‘tail’ in something not a structure or union
data_store_list_impl.c:131:12: warning: dereferencing ‘void *’ pointer
    ds->priv->count = 1;
            ^
data_store_list_impl.c:131:12: error: request for member ‘count’ in something not a structure or union
data_store_list_impl.c:134:30: warning: dereferencing ‘void *’ pointer
    node->prev      = ds->priv->tail;
                              ^
data_store_list_impl.c:134:30: error: request for member ‘tail’ in something not a structure or union
data_store_list_impl.c:136:12: warning: dereferencing ‘void *’ pointer
    ds->priv->tail  = node;
            ^
data_store_list_impl.c:136:12: error: request for member ‘tail’ in something not a structure or union
data_store_list_impl.c:137:12: warning: dereferencing ‘void *’ pointer
    ds->priv->count = 1;
            ^
data_store_list_impl.c:137:12: error: request for member ‘count’ in something not a structure or union
data_store_list_impl.c: At top level:
data_store_list_impl.c:142:6: error: conflicting types for ‘data_store_get_max_count’
 void data_store_get_max_count(data_store *ds, data_store_object *set, int index)
      ^
In file included from data_store_list_impl.c:5:0:
data_store.h:42:5: note: previous declaration of ‘data_store_get_max_count’ was here
 int data_store_get_max_count(data_store *ds, data_store_object *set, int index);
     ^
data_store_list_impl.c: In function ‘data_store_get_max_count’:
data_store_list_impl.c:144:44: warning: dereferencing ‘void *’ pointer
  data_store_list_node *node_temp = ds->priv->head;
                                            ^
data_store_list_impl.c:144:44: error: request for member ‘head’ in something not a structure or union
data_store_list_impl.c:153:11: error: incompatible types when assigning to type ‘data_store_object {aka struct <anonymous>}’ from type ‘void *’
    set[i] = NULL;
           ^
data_store_list_impl.c: At top level:
data_store_list_impl.c:157:6: error: conflicting types for ‘data_store_sort’
 void data_store_sort(data_store *ds)
      ^
In file included from data_store_list_impl.c:5:0:
data_store.h:47:6: note: previous declaration of ‘data_store_sort’ was here
 int  data_store_sort(data_store *ds);
      ^
data_store_list_impl.c: In function ‘data_store_sort’:
data_store_list_impl.c:161:22: warning: dereferencing ‘void *’ pointer
  for (node_i=ds->priv->head ; node_i ; node_i=node_i->next)
                      ^
data_store_list_impl.c:161:22: error: request for member ‘head’ in something not a structure or union
